fix overflow on story panel content

--- a/app/assets/stylesheets/components/story.scss
+++ b/app/assets/stylesheets/components/story.scss
@@ -1,4 +1,4 @@
-.story-container {
+.story-content-container {
   overflow-y: auto;
   height: 92%;
 }
